[gd_scene load_steps=3 format=3 uid="uid://7bvaemtb45ws"]

[ext_resource type="Script" uid="uid://cfurd1v466tn6" path="res://minigames/firepit/rock.gd" id="1_pb1se"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5oaf"]
size = Vector2(128, 128)

[node name="Rock" type="Button"]
theme_override_font_sizes/font_size = 64
text = "ROCK"
script = ExtResource("1_pb1se")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_y5oaf")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
